# crypto-gui

./: .gitignore  Cargo.toml  README.md  build_web.sh  corpus.txt  crypto-gui.code-workspace  index.html  sample_text.txt  sample_text_stripped.txt  setup_web.sh  start_server.sh
.cargo/: config.toml
assets/: sw.js
attacks/: 4_gram_scores.csv  caesar_attack.rs  mod.rs  substitution_attack.rs
ciphers/: cargo.toml
ciphers/src/: hill.rs  lib.rs  m209.rs  mod.rs  rc4.rs  rotors.rs  shamir.rs  shamir_secret_sharing.rs  solitaire.rs  traits.rs  vic.rs
codes/: Cargo.toml
codes/src/: ascii.rs  bacon.rs  baudot.rs  bijection.rs  block.rs  elias.rs  elias_integers.rs  errors.rs  fibonacci.rs  fibonacci_integers.rs  godel.rs  letter_word_code.rs  levenshtein.rs  levenshtein_integers.rs  lib.rs  linotype.rs  mod.rs  morse.rs  morse_encodings.rs  needle.rs  punycode.rs  spelling_alphabet.rs  tap_code.rs  traits.rs  unary.rs  unicode.rs  upc.rs
codes/src/binary_to_text/: ascii85.rs  base16.rs  base32.rs  base64.rs  basex.rs  bytewords.rs  hexadecimal.rs  intel_hex.rs  mod.rs  numeric.rs  pgp_words.rs  quoted_printable.rs  skey.rs
codes/src/braille/: braille_ascii.rs  braille_data.rs  braille_encoding.rs  braille_numbering.rs  mod.rs  simple_braille.rs  ueb.pest  ueb_inv.pest  unified_english_braille.rs  unified_english_braille_maps.rs  unified_english_braille_parser.rs  unified_english_braille_parser_inv.rs
codes/src/commercial/: isbn.rs  itf.rs  mod.rs  upc.rs
codes/src/compression/: mod.rs  run_length.rs  run_length_bytes.rs
codes/src/ecc/: convolutional.rs  cyclic_code.rs  cyclic_redundancy_check.rs  damm.rs  hamming.rs  isbn.rs  luhn.rs  m_of_n.rs  mod.rs  parity_bit.rs  parity_check.rs  polynomial.rs  repetition.rs  verhoeff.rs
codes/src/ids/: code_categories.rs  code_category_descriptions.json  code_descriptions.json  code_id.rs  mod.rs
codes/src/mathematical/: ackermann.rs  arithmetic.rs  balanced_ternary.rs  base_n.rs  base_n_bijective.rs  base_negative_two.rs  binary_coded_decimal.rs  binary_coded_decimal_unsigned.rs  biquinary_decimal.rs  combinadic.rs  elias.rs  elias_integers.rs  exp_golomb.rs  factoradic.rs  fibonacci.rs  fibonacci_integers.rs  godel.rs  golomb.rs  gray.rs  leb128.rs  leb28.rs  levenshtein.rs  levenshtein_integers.rs  mod.rs  negative_base.rs  negative_base_n.rs  primorial.rs  roman_numeral.rs  symmetric_unary.rs  truncated_binary.rs  twos_complement.rs  unary.rs  unary_from_scratch.rs  von_neumann_ordinals.rs
codes/src/mathematical/elias/: delta.rs  elias.rs  elias_integers.rs  gamma.rs  mod.rs  omega.rs
codes/src/other/: bacon.rs  barbier.rs  block.rs  country_codes.txt  fourier.rs  iso3166.rs  mod.rs  tap_code.rs
codes/src/romaji/: hepbern.rs  kunrei.rs  mod.rs  nihon.rs  romaji.rs  romaji_to_kana.rs  tokenizer.rs
codes/src/text_standards/: ascii.rs  baudot.rs  braille.rs  braille_ascii.rs  code_pages.rs  ics_flags.rs  linotype.rs  mod.rs  morse.pest  morse.rs  morse_encodings.rs  morse_gerke.pest  morse_itu.pest  mtk2.rs  needle.rs  punycode.rs  semaphore.rs  spelling_alphabet.rs  ueb.pest  unicode.rs  unified_english_braille.rs  unified_english_braille_maps.rs  unified_english_braille_parser.rs  us_tty.rs  ustty.rs  varicode.rs  wabun.pest  wabun.rs  wabun_encoding.rs
codes/src/text_utils/: functions.rs  mod.rs  preset_alphabet.rs  vecstring.rs
docs/: crypto_gui.js  crypto_gui_bg.wasm  index.html  manifest.json  sw.js
hashers/: cargo.toml
hashers/src/: adler.rs  ascon.rs  balloon.rs  bcrypt.rs  belt.rs  blake2b.rs  cityhash.rs  crypt.rs  dek.rs  errors.rs  fletcher.rs  fnv.rs  fxhash.rs  ghash.rs  gost.rs  groestl.rs  grostl.rs  haval.rs  hkdf.rs  hmac.rs  jh.rs  keccak.rs  knuth.rs  lib.rs  lm.rs  md2.rs  md4.rs  md5.rs  md5_stateful.rs  md6.rs  mgf1.rs  murmurhash.rs  murmurhash3.rs  one_at_a_time.rs  panama.rs  pbkdf.rs  pbkdf1.rs  pbkdf2.rs  pearson.rs  pjw.rs  (+26 more)
rngs/: cargo.toml
rngs/src/: a51.rs  a52.rs  acorn.rs  alternating_step.rs  blum_blum_shub.rs  blumblumshub.rs  chacha.rs  clcg.rs  dual_ec_drbg.rs  errors.rs  geffe.rs  glfsr.rs  gmwc.rs  halton.rs  hc128.rs  hc256.rs  ia.rs  ibaa.rs  isaac.rs  isaac64.rs  isaac_plus.rs  jsf.rs  kiss.rs  kiss11.rs  kiss_helsbreth.rs  lcg.rs  lehmer.rs  lfg.rs  lfsr.rs  lfsr32.rs  lfsr_polynomials.txt  lfsr_small.rs  lib.rs  md4.rs  md5.rs  mersenne_twister.rs  middle_square.rs  middle_square_binary.rs  mt19937_32.rs  mt19937_64.rs  (+23 more)
src/: alphabet.rs  app.rs  app_alt.rs  category_descriptions.json  category_pages.rs  cipher_descriptions.json  cipher_id.rs  cipher_panels.rs  cipher_windows.rs  ciphers.rs  code_id.rs  egui_aux.rs  errors.rs  global_rng.rs  grid.rs  hex_display.rs  integer_drag_value.rs  integer_edit.rs  lib.rs  main.rs  math.rs  math_functions.rs  preset_alphabet.rs  rng_id.rs  rotor.rs  rotors.rs  text_functions.rs  text_prep_page.rs  text_types.rs  tokenizer.rs  tokenizer_alt.rs  tokenizer_old.rs  ui_elements.rs  vecstring.rs
src/attack_panel/: caesar_attack_controls.rs  mod.rs  substitution_attack_controls.rs
src/cipher_attacks/: 2_gram_scores.csv  3_gram_scores.csv  caesar_attack.rs  mod.rs  substitution_attack.rs
src/cipher_panel/: _generic_components.rs  a51_controls.rs  a52_controls.rs  adfgvx_controls.rs  aes_controls.rs  aes_gcm_controls.rs  affine_controls.rs  alberti_controls.rs  amsco_controls.rs  app.rs  aria_controls.rs  ascon128_controls.rs  ascon80pq_controls.rs  ascon_controls.rs  autokey_controls.rs  b64_controls.rs  batco_controls.rs  bazeries_controls.rs  beaufort_controls.rs  bifid_controls.rs  blowfish.rs  blowfish_controls.rs  caesar_controls.rs  camellia_controls.rs  chacha20_poly1305_controls.rs  chacha_controls.rs  chacha_ex_controls.rs  chaocipher_controls.rs  checkerboard_controls.rs  columnar_controls.rs  cyclic_key_controls.rs  decoder_ring_controls.rs  des_controls.rs  desx_controls.rs  diagonal_columnar_controls.rs  diffie_hellman_controls.rs  dryad_controls.rs  elgamal_controls.rs  enigma_controls copy.rs  (+69 more)
utils/: cargo.toml
(+758 files in other folders)
