[package]
name = "crypto-gui"
version = "0.1.0"
authors = ["Alexander"]
edition = "2021"
rust-version = "1.68"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["ciphers", "codes", "utils"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 2

[dependencies]
egui = "0.22.0"
eframe = "0.22.0"
egui_extras = "0.22.0"

ciphers = {path = "ciphers"}
codes = {path = "codes"}
utils = {path = "utils"}

lazy_static = "1.4.0"
num = "0.4.0"
itertools = "0.10.0"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
json = "0.12.4"
csv = "1.2.1"
primal = "0.3.0"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
bimap = "0.6.3"
regex = "1"
rfd = "0.11.3"
nalgebra = "0.32.2"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"