[package]
name = "crypto-gui"
version = "0.1.0"
authors = ["Alexander"]
edition = "2021"
rust-version = "1.79"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg=web_sys_unstable_apis"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[workspace]
members = ["ciphers", "codes", "utils", "rngs", "hashers"]

[lib]
#crate-type = ["cdylib", "rlib"]



[profile.release]
opt-level = 2

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
#image = { version = "0.25", features = ["png"] }

ciphers = {path = "ciphers"}
codes = {path = "codes"}
utils = {path = "utils"}
rngs = {path = "rngs"}
hashers = {path = "hashers"}

lazy_static = "1.4.0"
num = "0.4.1"
num-prime = "0.4.3"
itertools = "0.10.0"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
json = "0.12.4"
csv = "1.2.1"
primal = "0.3.0"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
bimap = "0.6.3"
regex = "1"
rfd = "0.11.3"
strsim = "0.11.0"
strum = { version = "0.26", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"