[package]
name = "codes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path = "../utils"}

num = "0.4.1"
itertools = "0.10.0"
rand = "0.8.3"
getrandom = { version = "0.2", features = ["js"] }
json = "0.12.4"
primal = "0.3.0"
unicode-normalization = "0.1.19"
unicode-segmentation = "1.9.0"
bimap = "0.6.3"
regex = "1"
nalgebra = "0.32.2"
pest = "2.7.5"
pest_derive = "2.7.5"
strum = { version = "0.26", features = ["derive"] }
paste = "1.0.15"